...
typedef TabSetting = ({String name, bool enabled});

class _TabSettingsState extends State<TabSettings> {
  List<TabSetting> _tabs = [
    (name: 'HistoryPage', enabled: false),
    (name: 'PlansPage', enabled: false),
    (name: 'GraphsPage', enabled: false),
    (name: 'TimerPage', enabled: false),
    (name: 'SettingsPage', enabled: false),
  ];

  @override
  void initState() {
...

    final enabled = tabSplit.map((tab) => (name: tab, enabled: true)).toList();
    final disabled = _tabs
        .where((tab) => !tabSplit.contains(tab.name))
        .toList();

    _tabs = enabled + disabled;
  }

  void setTab(String name, bool enabled) {
    if (!enabled && _tabs.where((tab) => tab.enabled == true).length == 1)
      return toast(context.l10n.atLeastOneTab);
    final index = _tabs.indexWhere((tappedTab) => tappedTab.name == name);
...
